'fix-spacing'

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -224,7 +224,7 @@ span.single-suggestion button:focus {
     width: 60%;
     max-width: 600px;
     min-width: 340px;
-    padding: 70px 20px 100px 20px;
+    padding: 70px 3px 100px 3px;
     color: rgb(220, 220, 220);
     text-align: center;
 }
@@ -250,7 +250,7 @@ span.single-suggestion button:focus {
 }
 
 .go-text b {
-    font-size: 15.5px;
+    font-size: 15px;
     font-weight: 600;
     font-family: "switzer", serif;
 }
